# ReSTIR-Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: glslc.cmake
gltf/: gltfscene.cpp  gltfscene.h
media/: Final Presentation.zip.011
scenes/office/: scene.gltf
shaders/: filtercube.vert.spv  final.frag.spv  integrate_brdf.frag.spv  integrate_brdf.vert.spv  passthrough.vert.spv  pick.rchit.spv  pick.rgen.spv  pick.rmiss.spv  prefilter_diffuse.frag.spv  prefilter_glossy.frag.spv  raytrace.rahit.spv  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv  raytraceShadow.rmiss.spv  skybox.frag.spv  skybox.vert.spv  tonemap.frag.spv
src/: aabbTreeBuilder.cpp  aabbTreeBuilder.h  app.cpp  app.h  camera.h  fpsCounter.h  glfwWindow.cpp  glfwWindow.h  main.cpp  misc.cpp  misc.h  sceneBuffers.h  shader.h  shaderIncludes.h  swapchain.cpp  swapchain.h  transientCommandBuffer.h  vertex.h  vma.cpp  vma.h
src/passes/: demoPass.h  gBufferPass.cpp  gBufferPass.h  imguiPass.h  lightSamplePass.h  lightingPass.h  pass.h  restirPass.h  rtPass.h  softwareVisibilityTestPass.h  spatialReusePass.h  temporalReusePass.h  unbiasedReusePass.h  unbiasedRtPass.h
src/shaderStructs/: aabbTree.h  vertex.h
src/shaders/: gBuffer.frag  gBuffer.vert  hwVisibilityTest.rchit  hwVisibilityTestShadow.rmiss  lightSample.comp  lighting.frag  quad.vert  raytrace.rgen  raytrace.rmiss  restirOmni.glsl  restirOmniHardware.rgen  restirOmniSoftware.comp  simple.frag  simple.vert  softwareVisibilityTest.comp  spatialReuse.comp  temporalReuse.comp  tonemapping.glsl  unbiasedRaytrace.rgen  unbiasedReuse.glsl  unbiasedReuseHardware.rgen  unbiasedReuseSoftware.comp
src/shaders/include/: RIS.glsl  common.glsl  disneyBRDF.glsl  frustumUtils.glsl  gBufferDebugConstants.glsl  rand.glsl  reservoir.glsl  restirUtils.glsl  softwareRaytracing.glsl  visibilityTest.glsl
src/shaders/include/structs/: aabbTree.glsl  light.glsl  lightingPassStructs.glsl  reservoir.glsl  restirStructs.glsl  sceneStructs.glsl
